--- a/dot_config/waybar/config
+++ b/dot_config/waybar/config
@@ -5,7 +5,7 @@
     // "width": 1280, // Waybar width
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode"],
+    "modules-left": ["sway/workspaces", "sway/mode", "custom/launcher"],
     "modules-center": ["clock"],
     "modules-right": ["custom/spotify", "pulseaudio", "idle_inhibitor", "network", "sway/language", "tray"],
     // Modules configuration
@@ -46,6 +46,10 @@
         "on-click": "playerctl -p spotify play-pause",
         "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify -l 42 2> /dev/null",
         "exec-if": "pgrep spotify"
+    },
+    "custom/launcher": {
+        "format": "",
+        "on-click": "rofi -modi drun -show drun"
     },
     "idle_inhibitor": {
         "format": "{icon}",
