--- a/dot_config/starship.toml
+++ b/dot_config/starship.toml
@@ -14,6 +14,8 @@ $character"""
 
 [directory]
 style = "blue"
+read_only = " ro"
+repo_root_style = "blue bold"
 
 [character]
 success_symbol = "[›](cyan)"
@@ -25,7 +27,7 @@ format = "[$branch]($style)"
 style = "bright-black"
 
 [git_status]
-format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218) ($ahead_behind $stashed)]($style) "
+format = "[[(*$conflicted$untracked$modified$staged$renamed$deleted)](218)( $ahead_behind)( $stashed)]($style) "
 style = "purple"
 conflicted = "​"
 untracked = "​"
